# ockam

implementations/elixir/ockam/ockam_vault_software/native/vault/software/: CMakeLists.txt
implementations/rust/: Cargo.toml
implementations/rust/node/: Cargo.toml
implementations/rust/ockam/: Cargo.toml
implementations/rust/ockam/src/: lib.rs
implementations/rust/vault/ffi/src/: error.rs  lib.rs
implementations/rust/vault/file/src/: lib.rs
implementations/rust/vault/traits/: Cargo.toml
implementations/rust/vault/traits/src/: lib.rs
