[workspace]

members = [
    "common",
    "daemon",
    "examples",
    "kex",
    "message",
    "vault",
    "router",
    "system",
    "queue_topic",
    "transport",
    "node",
    "xeddsa",
    "c/generate_bindings",
    "c/bindings",
    "c/rust_memory",
    "message_router",
    "tcp_manager",
    "worker_manager",
]

default-members = [
    "common",
    "daemon",
    "examples",
    "kex",
    "message",
    "vault",
    "router",
    "system",
    "queue_topic",
    "transport",
    "node",
    "xeddsa",
    "c/bindings",
    "c/rust_memory",
    "message_router",
    "tcp_manager",
    "worker_manager",
]
