[package]
name = "ockam"
version = "0.1.0"
authors = ["Ockam Developers"]
edition = "2018"

[profile.release]
lto = true

[features]
default = ["ockam-common/default", "ockam-kex/default", "ockam-vault/default"]
ffi = ["ockam-common/default", "ockam-kex/ffi", "ockam-vault/ffi"]

[dependencies]
failure = "0.1"
hex = "0.4"
ockam-common = { version = "0.1", path = "../common", default-features = false }
ockam-kex = { version = "0.1", path = "../kex", default-features = false }
ockam-message = { version = "0.1", path = "../message", default-features = false }
ockam-router = { version = "0.1", path = "../router", default-features = false }
ockam-system = { version = "0.1", path = "../system", default-features = false }
ockam-queue-topic = { version = "0.1", path = "../queue_topic", default-features = false }
ockam-transport = { version = "0.1", path = "../transport", default-features = false }
ockam-vault = { version = "0.1", path = "../vault", default-features = false }
ockam-message-router = { version = "0.1", path = "../message_router", default-features = false }
ockam-no-std-traits = { version = "0.1", path = "../no_std_traits", default-features = false }
ockam-node = { version = "0.1", path = "../node", default-features = false }
ockam-worker-manager = { version = "0.1", path = "../worker_manager", default-features = false }
ockam-tcp-manager = { version = "0.1", path = "../tcp_manager", default-features = false }
rand = "0.7"
